- drakbug:
  o prevent altering tool and the like when catching a bug (#35241)

Version 10.5.2 - 6 November 2007, by Thierry Vignaud

- diskdrake:
  o add support for ext4
- drakbug:
  o keep buggy process around so that we can run gdb on it (if perl segfaulted)
  o report gdb trace if possible
- harddrake: detect storage and various controllers before anything else
  (so that storage devices get detected at first boot on live)

Version 10.5.1 - 31 October 2007, by Thierry Vignaud

- bootloader-config:
  o bootloader-config must not need network::network from libdrakx-net
  o if drakx-kbd-mouse-x11 is not installed, simply don't add bootsplash
    instead of dying
- fix buttons order under KDE when using compiz (by detecting kde-window-decorator)
- drakclock/finish-install: disable DPMS and screensaver when setting time,
  not to blank monitor (#17031)

Version 10.5.0 - 15 October 2007, by Thierry Vignaud

- localedrake:
  o do propose "Suisse" after selecting french language (#34675)
- draksec:
  o fix switching from "no_password" to "_password" (#34490)

Version 10.4.239 - 5 October 2007, by Thierry Vignaud

- finish-install: fix release notes window size

Version 10.4.237 - 5 October 2007, by Olivier "blino" Blin

- fix installed modules detection (#34478)
- fix version reported by drakfont & harddrake
- when checking dkms module packages, check that modules are either
  available in urpmi media, or already installed (fix detection in live)
- add shadow 'in' around Gtk2::SimpleList widgets

Version 10.4.235 - 4 October 2007, by Thierry Vignaud

- diskdrake --fileshare
  o install nautilus-filesharing if nautilus is installed (#34262)
- finish-install: use translations for network step

Version 10.4.234 - 4 October 2007, by Olivier "blino" Blin

- finish-install: use translations for keyboard and 3D steps

Version 10.4.232 - 4 October 2007, by Olivier "blino" Blin

- add helper to get kernel module path (to be used in draklive)
