@@ -1,3 +1,5 @@
+- localedrake:
+  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
 - partitioning wizard: ensure existing_part and resize_fat are proposed before
   wipe_drive
 - in case of ftp/http media, we select basesystem before doing
