@@ -1,3 +1,5 @@
+- localedrake:
+  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
 - drakbug:
   o prevent altering tool and the like when catching a bug (#35241)
 
